--- a/hm.bib
+++ b/hm.bib
@@ -168,6 +168,15 @@ Bibliography}
   year     = {2004}
 }
 
+@book{goldstein2013classical,
+  title     = {Classical Mechanics},
+  author    = {Goldstein, H. and Poole, C.P. and Safko, J.},
+  isbn      = {9781292026558},
+  lccn      = {2001027951},
+  year      = {2013},
+  publisher = {Pearson}
+}
+
 @article{Guzzo2015,
   abstract = {The Nekhoroshev theorem has been often indicated in the last decades as the reference theorem for explaining the dynamics of several systems which are stable in the long-term. The Solar System dynamics provides a wide range of possible and useful applications. In fact, despite the complicated models which are used to numerically integrate realistic Solar System dynamics as accurately as possible, when the integrated solutions are chaotic the reliability of the numerical integrations is limited, and a theoretical long-term stability analysis is required. After the first formulation of Nekhoroshev's theorem in 1977, many theoretical improvements have been achieved. On the one hand, alternative proofs of the theorem itself led to consistent improvements of the stability estimates; on the other hand, the extensions which were necessary to apply the theorem to the systems of interest for Solar System Dynamics, in particular concerning the removal of degeneracies and the implementation of computer assisted proofs, have been developed. In this review paper we discuss some of the motivations and the results which have made Nekhoroshev's theorem a reference stability result for many applications in the Solar System dynamics.},
   author   = {Guzzo, M.},
@@ -181,6 +190,15 @@ Bibliography}
   title    = {{The Nekhoroshev theorem and long-term stabilities in the solar system}},
   volume   = {1},
   year     = {2015}
+}
+
+@book{landau1976mechanics,
+  title     = {Mechanics: Volume 1},
+  author    = {Landau, L.D. and Lifshitz, E.M. and Sykes, J.B. and Bell, J.S.},
+  isbn      = {9780750628969},
+  series    = {Butterworth-Heinemann},
+  year      = {1976},
+  publisher = {Elsevier Science}
 }
 
 @misc{lectures:baez,
@@ -234,6 +252,14 @@ Bibliography}
   zbl       = {0999.37053},
   doi       = {10.1090/pspum/069},
   url       = {http://www.poschel.de/pbl/kam-1.pdf}
+}
+
+@book{schwichtenberg2019no,
+  title     = {No-Nonsense Classical Mechanics: A Student-Friendly Introduction},
+  author    = {Schwichtenberg, J.},
+  url       = {https://nononsensebooks.com/cm/},
+  year      = {2019},
+  publisher = {No-Nonsense Books}
 }
 
 @misc{WikipediaEN:LPS,
