--- a/hm.tex
+++ b/hm.tex
@@ -148,14 +148,15 @@ linktoc=page}
 \pagenumbering{arabic}
 \chapter*{Preface}
 
-The main reference for this course is \cite{book:arnold}, although we will deviate from the structure of the book or use alternative approaches for some of the proofs.
-
 The literature on classical (or analytical, as it was called by Lagrange) mechanics is full of good material.
 Different sources present the topic from different perspectives and with different points of view, and may suite different people differently.
-In addition to \cite{book:arnold}, these lecture notes have also been heavily influenced by \cite{book:knauf,lectures:dubrovin,book:lowenstein,book:marsdenratiu,lectures:tong,book:sicm}.
+In these lecture notes I am iterating on my perspective.
+The approach I am taking has been heavily influenced by \cite{book:arnold, book:knauf,lectures:dubrovin, book:lowenstein, book:marsdenratiu, lectures:tong,landau1976mechanics}.
 
 The book \cite{book:knauf}, in addition to being a good introduction to many topics in classical mechanics that we will not have time to discuss during the lectures, can be freely accessed from within the university using the \href{https://link.springer.com/book/10.1007%2F978-3-662-55774-7}{SpringerLink} service.
-Most of the topics covered in this course can be found on \cite{book:knauf} in chapters 1, 6, 8, 10, 11, 13, 15. In particular, it presents a more accessible approach for the proof of the KAM theorem.
+Most of the topics covered in this course can be found on \cite{book:knauf} in chapters 1, 6, 8, 10, 11, 13, 15. I believe this book presents an almost accessible proof of the KAM theorem.
+
+I had lots of fun reading \cite{schwichtenberg2019no}, if none of the references above satisfies you, consider having a look. Anf for an unusual approach to the matter, centered on making everything explicitly computable by a computer, you can have a look at the marvellous \cite{book:sicm}. Finally, a good and enjoyable classical reference is \cite{goldstein2013classical}.
 
 These notes are not (yet) exhaustive.
 They will be updated throughout the course, and it will likely take a few years of course iterations before they stabilize.
@@ -166,9 +167,9 @@ We will discuss symmetries and phase space reduction, normal modes and small osc
 We will then move to study action--angle coordinates and integrability, and finally we will discuss perturbation theory.
 On the latter, we will only briefly discuss resonances and mostly focus on KAM theory and Nekhoroshev theorem.
 
-The final lectures of the course will focus on the role of hamiltonian mechanics in current research. They are open to discussion and will be chosen by focusing on the main interests of the class. Possible topics include quantization, semiclassical analysis, contact and/or sub-riemannian geometry, numerical methods, mechanics of non-conservative systems, rigid bodies, mathematical billiards, ...
+Topics that I intend to include over time include contact mechanics, non-holonomic mechanics/sub-riemannian geometry, numerical methods, rigid bodies, mathematical billiards, integrability via Lax pairs...
 
-Before concluding, let me emphasize two non-standard notational conventions that I decided to adopt from \cite{book:arnold}: in the rest of this manuscript we will denote $(\cdot,\cdot)$ the inner products, also in Euclidean spaces when they correspond to the standard scalar product, and $[\cdot,\cdot]$ the exterior products, also in $\R^3$ when I could have instead used the cross product.
+Before concluding, let me emphasize two non-standard notational conventions that I decided to adopt from \cite{book:arnold}: in the rest of this manuscript we will denote $(\cdot,\cdot)$ the inner products, also in Euclidean spaces when they correspond to the standard scalar product, and $[\cdot,\cdot]$ the exterior products, also in $\R^3$ when I could have instead used the cross product. \emph{I have revisited my choice here and this year I will try to update the notation.}
 
 Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
