--- a/hm.tex
+++ b/hm.tex
@@ -132,7 +132,7 @@ linktoc=page}
 \thispagestyle{empty}
 \null\vfill
 \begin{center}
-    Version 1.1\\
+    Version 1.2\\
     \today
 \end{center}
 \vfill
@@ -1377,7 +1377,7 @@ Let's make another example before entering into the gist of the matter.
 
 It seems that we can expect other conserved quantities. However, before being able to give a precise statement we need to introduce some preliminary concepts.
 
-Let $M$ be a smooth manifold. A smooth map $\varphi : M \to M$ is called \emph{diffeomorphism} if it is invertible and its inverse $\varphi^{-1}$ is smooth. At each point $q\in M$ we can define the \emph{differential} of $\phi$, i.e. the linear map $\phi_*$ between tangent spaces (sometimes also denoted $\d\phi_q$)
+Let $M$ be a smooth manifold. A smooth map $\phi : M \to M$ is called \emph{diffeomorphism} if it is invertible and its inverse $\phi^{-1}$ is smooth. At each point $q\in M$ we can define the \emph{differential} of $\phi$, i.e. the linear map $\phi_*$ between tangent spaces (sometimes also denoted $\d\phi_q$)
 \begin{equation}
     \phi_*: T_q M \to T_{\phi(q)} M,
     \quad \phi_* v = \phi_*(q) v := \frac{\d}{\d t} \phi(q + t v) \Big|_{t=0},
