Improvements up to chapter 1.1.1
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.bib
+++ b/hm.bib
@@ -201,6 +201,14 @@ Bibliography}
   publisher = {Elsevier Science}
 }
 
+@misc{lectures:aom:seri,
+  author = {Seri, Marcello},
+  title  = {Analysis on Manifolds},
+  year   = 2020,
+  note   = {Unpublished lecture notes},
+  url    = {https://github.com/mseri/AoM/releases}
+}
+
 @misc{lectures:baez,
   author = {Baez, John C. and Wise, Derek K.},
   title  = {Lectures on Classical Dynamics},
