--- a/hm.tex
+++ b/hm.tex
@@ -237,14 +237,13 @@ In 1814, Laplace \cite{book:laplace} wrote
 \end{quotation}
 
 In other words, this principle states that the initial state $\left(q(t_0), \dot q(t_0)\right)$ uniquely determines its evolution $\left(q(t),\dot q(t)\right)$ for $t > t_0$.
-Picard-Lindel\"of theorem\footnote{Also known as existence and uniqueness of solutions of initial value problems} implies that the Newtonian principle of determinacy is locally satisfied\footnote{Modulo some minimal regularity requirements.} by the \emph{equations of motion} of the mechanical system, i.e. second order differential equations derived from Newton's law.
+Picard-Lindel\"of theorem\footnote{Also known as existence and uniqueness of solutions of initial value problems.} implies that the Newtonian principle of determinacy is locally satisfied\footnote{Modulo some minimal regularity requirements.} by the \emph{equations of motion} of the mechanical system, i.e. second order differential equations derived from Newton's law.
 
 \subsection{Motion in one degree of freedom}
 
 Before temporarily moving to Lagrangian mechanics, let's anticipate some of the concepts in some simple cases.
 
 \begin{example}[Horizontal spring and pendulum]\label{ex:sprPen}
-
     Consider an idealized system consisting of a point particle of mass $m$ attached to a spring with stiffness $k$, sliding on a frictionless surface.
     Assume that the motion is one-dimensional along the axis of the spring and let $x$ denote the displacement of the system from its equilibrium position (i.e. the position in which the spring is completely at rest: not compressed nor extended). We consider this system to exclude gravitational forces from the picture.
     
